--- a/README.Rmd
+++ b/README.Rmd
@@ -39,6 +39,7 @@ Have you created a thesisdown template for your institution and would like to ha
 |:---------------------------------------|:---------------------------------------------------------------------------------------------|:---------------------------------------------------------------|
 |American University                    |[SimonHeuberger/eagledown](https://github.com/SimonHeuberger/eagledown)                     |[benmarwick/huskydown](https://github.com/benmarwick/huskydown) |
 |Brock University                        |[brentthorne/brockdown](https://github.com/brentthorne/brockdown)                             |[zkamvar/beaverdown](https://github.com/zkamvar/beaverdown)     |
+|Brigham Young University | [gregmacfarlane/cosmodown](https://github.com/gregmacfarlane/cosmodown)                                     | [wjakethompson/jayhawkdown](https://github.com/wjakethompson/jayhawkdown) |
 |École Doctorale de Mathématiques Hadamard |[abichat/hadamardown](https://github.com/abichat/hadamardown)                         |[ismayc/thesisdown](https://github.com/ismayc/thesisdown)       |
 |Drexel University                       |[tbradley1013/dragondown](https://github.com/tbradley1013/dragondown)                         |[ismayc/thesisdown](https://github.com/ismayc/thesisdown)       |
 |Duke University                         |[mine-cetinkaya-rundel/thesisdowndss](https://github.com/mine-cetinkaya-rundel/thesisdowndss) |[ismayc/thesisdown](https://github.com/ismayc/thesisdown)       |
